update lazy page to add context

--- a/content/reference/lazy.adoc
+++ b/content/reference/lazy.adoc
@@ -10,7 +10,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
-_(Note: this section describes work in prerelease, available in the SVN trunk since rev 1287)_
+_(Note: this page describes the changes made in the last large update to sequences, when Rich was also exploring an alternative called streams. Treat this page as a useful historical record of these design decisions, rather than as reference documentation.)_
 
 In working on streams a few things became evident:
 
