--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -103,6 +103,13 @@ A registered spec identifier can be used in place of a spec definition in the op
 
 You will see later that registered specs can (and should) be used anywhere we compose specs.
 
+.Spec Names
+****
+In this guide we will often use auto-resolved keywords like `::date`. The Clojure reader resolves these to a fully-qualified keyword using the current namespace. You may also see some cases where a fully-qualified keyword like `:animal/dog` is used to name a spec. 
+
+Generally, Clojure code should use keyword namespaces that are sufficiently unique such that they will not conflict with other spec users. If you are writing a library for public use, spec namespaces should include the project name, url, or organization such that you will not conflict. Within a private organization, you may be able to use shorter names - the important thing is that they are sufficiently unique to avoid conflicts.
+****
+
 == Composing predicates
 
 The simplest way to compose specs is with https://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec/and[`and`] and https://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec/or[`or`]. Let's create a spec that combines several predicates into a composite spec with `s/and`:
