--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -201,6 +201,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://soundcloud.com[Soundcloud]
 * https://www.sparkfund.co/[SparkFund]
 * https://www.spotify.com[Spotify]
+* https://exchange.staples.com/[Staples Exchange]
 * http://www.staples-sparx.com/[Staples Sparx]
 * http://structureddynamics.com/[Structured Dynamics]
 * http://www.studyflow.nl[Studyflow]
