--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -174,6 +174,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://publizr.com/[Publizr]
 * http://puppetlabs.com/[Puppet Labs]
 * http://purpleapp.com[Purple]
+* https://quartethealth.com/[Quartet Health]
 * http://www.quintype.com/[Quintype]
 * https://www.rallydev.com/[Rally]
 * https://www.rareburg.com/[Rareburg]
