--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -74,6 +74,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://drwtrading.com[DRW Trading Group]
 * http://www.ebay.com/[eBay]
 * http://element84.com[Element 84]
+* https://writeandimprove.com/[English Language iTutoring]
 * http://enterlab.dk[Enterlab]
 * http://eventfabric.com/[Event Fabric]
 * https://www.eyeota.com/[Eyeota]
@@ -188,6 +189,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://rocketfuel.com/[Rocket Fuel]
 * http://www.roomkey.com/[RoomKey] - see http://cognitect.com/consulting/case-studies/roomkey[case study]
 * http://roximity.com/[ROXIMITY]
+* https://www.rts.ch/info[RTS]
 * http://www.salesforce.com/[Salesforce]
 * http://www.shareablee.com/[Shareablee]
 * http://shore.li/[shore.li]
