--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -31,6 +31,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://BearyInnovative.com[BearyInnovative]
 * http://bevuta.com/[bevuta]
 * https://www.braintreepayments.com/[Braintree Payments] (acquired by PayPal)
+* http://www.breezeehr.com/[Breeze EHR]
 * http://brickalloy.com/[BrickAlloy]
 * https://www.brightin.nl/[Brightin]
 * http://www.brightnorth.co.uk/[Bright North]
