--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -91,10 +91,12 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.finalist.nl/[Finalist]
 * http://flocktory.com[Flocktory]
 * http://www.flowa.fi/[Flowa]
+* http://www.formcept.com/[FORMCEPT]
 * http://try.framed.io/[Framed Data]
 * https://www.fullcontact.com/[FullContact]
 * http://functionalworks.com/[Functional Works]
 * http://fundingcircle.com[Funding Circle]
+* http://futurice.com/[Futurice]
 * http://www.getcontented.com.au/[GetContented]
 * http://about.getset.com/[GetSet]
 * https://goldfynch.com/[GoldFynch]
@@ -114,6 +116,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://immute.co/[Immute]
 * http://innoq.com[InnoQ]
 * http://www.intentmedia.com/[Intent Media]
+* http://www.interware.com.mx/[InterWare] - http://caudal.io/[Caudal]
 * http://www.intuit.com[Intuit]
 * http://www.iplantcollaborative.org/[iPlant Collaborative]
 * https://www.jcrew.com/[J.Crew]
@@ -188,8 +191,10 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://www.redhat.com/[Red Hat]
 * https://www.redpineapplemedia.com/[Red Pineapple Media]
 * http://rentpath.com/[RentPath]
+* http://jbrj.gov.br/[Rio de Janeiro Botanical Garden] - http://cncflora.jbrj.gov.br/[CNCFlora], https://biodivdev.github.io/[OSS]
 * http://rjmetrics.com/[RJMetrics]
 * http://rocketfuel.com/[Rocket Fuel]
+* http://www.romr.com/[Rōmr]
 * http://www.roomkey.com/[RoomKey] - see http://cognitect.com/consulting/case-studies/roomkey[case study]
 * http://roximity.com/[ROXIMITY]
 * https://www.rts.ch/info[RTS]
