--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -144,6 +144,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.madriska.com/[Madriska Inc.]
 * http://www.magnet.coop/[Magnet]
 * http://mainstreetgenome.com/[Main Street Genome]
+* http://www.comidadagente.org/[Marktbauer/Comida da gente]
 * http://www.mastodonc.com/[Mastodon C]
 * https://mazira.com/[Mazira]
 * http://meewee.com[MeeWee]
@@ -151,6 +152,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://metosin.fi/[Metosin]
 * http://www.mixrad.io/[MixRadio]
 * http://www.modelogiq.com/[modelogiq]
+* http://www.molequedeideias.net/[Moleque de Ideias]
 * http://www.mysema.com/[Mysema]
 * http://nilenso.com/[nilenso]
 * http://nemCV.com[nemCV.com]
