update company page

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -45,6 +45,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://www.capitalone.com/[CapitalOne]
 * https://cardforcoin.com/[cardforcoin] and https://foldapp.com/[Fold]
 * https://carouselapps.com/[Carousel Apps]
+* http://www.ca.com/[CA Technologies]
 * http://www.cerner.com/[Cerner]
 * http://chariotsolutions.com/[Chariot Solutions]
 * http://chartbeat.com[Chartbeat]
@@ -194,7 +195,6 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://purpleapp.com[Purple]
 * https://quartethealth.com/[Quartet Health]
 * http://www.quintype.com/[Quintype]
-* https://www.rallydev.com/[Rally]
 * https://www.redhat.com/[Red Hat]
 * https://www.redpineapplemedia.com/[Red Pineapple Media]
 * http://rentpath.com/[RentPath]
