--- a/content/events/2017/clojutre.adoc
+++ b/content/events/2017/clojutre.adoc
@@ -5,9 +5,9 @@ clojuTRE
 :jbake-edition: 2017
 :jbake-link: http://clojutre.org/2017/
 :jbake-location: Tampere, Finland
-:jbake-start: 2017-09-92
+:jbake-start: 2017-09-02
 :jbake-end: 2017-09-02
 
-clojuTRE is a free Clojure conference organized by http://www.metosin.fi/[Metosin]. The event has single track, late start, short talks (20 minutes and 5 minutes Q&A) and a funky after party for networking, discussions and draft beer. We welcome both newbies and seasoned Clojurists.
+clojuTRE is a Clojure conference organized by http://www.metosin.fi/[Metosin]. The event has single track, late start, short talks (20 minutes and 5 minutes Q&A) and a funky after party for networking, discussions and draft beer. We welcome both newbies and seasoned Clojurists.
 
 
