--- a/content/stories/rts.adoc
+++ b/content/stories/rts.adoc
@@ -11,7 +11,7 @@ This first interview is with Frédéric Vergez about his work at https://rts.ch/
 
 *How long have you been working with Clojure and ClojureScript?*
 
-For the last 3 years with Clojure, a bit more than a year with ClojureScript
+For the last 3 years with Clojure, a bit more than a year with ClojureScript.
 
 *How are you using Clojure and ClojureScript?*
 
