--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -7,7 +7,7 @@ Alex Miller
 
 Below is a partial list of some companies using Clojure or ClojureScript. Most of this information comes from direct contacts, presentations, or other online resources. If you would like to be added or removed from this list, please contact __alex.miller@cognitect.com__.
 
-Also, check out the <<success_stories#,Clojure Success Stories>> page!
+Also, check out the <<success_stories#,Clojure Success Stories>> and <<community_stories#,Community Stories>> pages!
 
 * http://8thlight.com/[8th Light]
 * http://www.aclaimant.com/[aclaimant]
