add image to story

--- a/content/stories/rts.adoc
+++ b/content/stories/rts.adoc
@@ -7,6 +7,9 @@ Alex Miller
 
 Welcome to the first in an ongoing series of interviews with companies using Clojure and ClojureScript!
 
+[.right]
+image:/images/content/stories/rts.jpeg["RTS",height="80"]
+
 This first interview is with Frédéric Vergez about his work at https://rts.ch/[RTS (Radio Télévision Suisse)], the Swiss national TV and radio broadcaster, and the https://www.rts.ch/info[national news website].
 
 *How long have you been working with Clojure and ClojureScript?*
