cta on success stories

--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -5,7 +5,7 @@ Justin Gehtland
 :toc: macro
 :icons: font
 
-Here are just some of the public success stories from companies using Clojure.
+Here are just some of the public success stories from companies using Clojure.  If you'd like to be added to this list, please contact __alex.miller@cognitect.com__.
 
 ++++
 		<link rel="stylesheet" type="text/css" href="/css/success_stories.css" />
