--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -7,13 +7,13 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Stable Release: 1.8.0 (January 19, 2016)
+== Stable Release: 1.8.0 (Jan 19, 2016)
 
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/clojure-1.8.0.zip[Clojure 1.8.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
 * Requirements: Java 1.6, 1.7, or 1.8
 
-== Development Release: 1.9.0-alpha15
+== Development Release: 1.9.0-alpha15 (Mar 14, 2017)
 
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0-alpha15/clojure-1.9.0-alpha15.zip[Clojure 1.9.0-alpha15]
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.9.0*[Clojure 1.9 pre-release builds]
