add call to action on stories index

--- a/content/community/community_stories.adoc
+++ b/content/community/community_stories.adoc
@@ -7,4 +7,5 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
+If you'd like to share your Clojure story, please contact __alex.miller@cognitect.com__.
 
