--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -24,6 +24,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://annadaletech.com/[Annadale Technologies]
 * http://www.answers.com[Answers.com]
 * http://www.anywhere.com/[Anywhere.com]
+* https://www.apexdatasolutions.net/[Apex Data Solutions]
 * http://www.appsflyer.com/[AppsFlyer]
 * http://www.appsnsites.com/[Appsnsites]
 * http://ardoq.com/[Ardoq]
