change story name

--- a/content/stories/cstap.adoc
+++ b/content/stories/cstap.adoc
@@ -2,7 +2,7 @@
 Alex Miller
 2017-04-07
 :jbake-type: story
-:jbake-company: Cybozu Startups
+:jbake-company: cstap
 :jbake-link: https://anpi.cstap.com/anpi2.html
 
 This interview is with Ikuru Kanuma, a developer for Cybozu Startups in Japan.
