--- a/content/stories/uhn.adoc
+++ b/content/stories/uhn.adoc
@@ -4,7 +4,7 @@ Alex Miller
 :jbake-type: story
 :jbake-company: University Health Network
 
-This interview discusses Dmitri Sotnikov about his use of Clojure and ClojureScript at University Health Network (UHN).
+This interview is a discussion with Dmitri Sotnikov about his use of Clojure and ClojureScript at University Health Network (UHN).
 
 [.right]
 image:/images/content/stories/logo-uhn.png["UHN",height="55"]
