--- a/content/community/libraries.adoc
+++ b/content/community/libraries.adoc
@@ -11,9 +11,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Clojure Contrib is a collection of libraries managed with the same Contributor Agreement, license, and development workflow as Clojure itself. Code in Clojure Contrib can be considered for inclusion in newer versions of Clojure.
 
-Clojure Contrib library code is hosted on https://github.com/clojure[Github]. Design and issue tracking are via http://dev.clojure.org/display/doc/Clojure+Contrib[Confluence] and JIRA.
+Clojure Contrib library code is hosted on https://github.com/clojure[Github]. Design and issue tracking are via https://dev.clojure.org/display/doc/Clojure+Contrib[Confluence] and JIRA.
 
-Prior to Clojure 1.3, Contrib was packaged as a single monolithic JAR. If you are migrating from a pre-1.3 version of Clojure, please see http://dev.clojure.org/display/community/Where+Did+Clojure.Contrib+Go[this page] for migration help regarding old contrib libraries.
+Prior to Clojure 1.3, Contrib was packaged as a single monolithic JAR. If you are migrating from a pre-1.3 version of Clojure, please see https://dev.clojure.org/display/community/Where+Did+Clojure.Contrib+Go[this page] for migration help regarding old contrib libraries.
 
 == Leiningen
 
@@ -21,7 +21,7 @@ The vast majority of Clojure developers use https://github.com/technomancy/leini
 
 == IDEs and Developer Tools
 
-Community volunteers maintain http://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different developer tools.
+Community volunteers maintain https://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different developer tools.
 
 == Finding Libraries
 
