--- a/content/reference/repl_and_main.adoc
+++ b/content/reference/repl_and_main.adoc
@@ -153,8 +153,8 @@ Connection closed by foreign host.
 
 Also see:
 
-* http://dev.clojure.org/jira/browse/CLJ-1671[CLJ-1671]
-* http://dev.clojure.org/display/design/Socket+Server+REPL[Socket REPL design page]
+* https://dev.clojure.org/jira/browse/CLJ-1671[CLJ-1671]
+* https://dev.clojure.org/display/design/Socket+Server+REPL[Socket REPL design page]
 
 == Related functions
 
