--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -12,11 +12,11 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://groups.google.com/group/clojure[Clojure Google Group]
 * #clojure IRC channel on https://freenode.net[freenode.net]
 * http://clojurians.net[Clojurians Slack Chat]
-* http://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
+* https://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
 * http://planet.clojure.in/[Planet Clojure] blog aggregator
-* http://dev.clojure.org/display/community/Home[Community Wiki]
-* http://dev.clojure.org/display/doc/Home[Documentation Wiki]
-* http://dev.clojure.org/display/design/Home[Design Wiki]
+* https://dev.clojure.org/display/community/Home[Community Wiki]
+* https://dev.clojure.org/display/doc/Home[Documentation Wiki]
+* https://dev.clojure.org/display/design/Home[Design Wiki]
 
 == Tutorials and Learning Materials
 
@@ -27,7 +27,7 @@ Official:
 * <<xref/../../reference/documentation#,Clojure Reference Docs>> - official reference information
 * <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
 * Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
-* Issues - http://dev.clojure.org/jira/browse/CLJ[Clojure], http://dev.clojure.org/jira/browse/CLJS[ClojureScript], http://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
+* Issues - https://dev.clojure.org/jira/browse/CLJ[Clojure], https://dev.clojure.org/jira/browse/CLJS[ClojureScript], https://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
 
 Community:
 
@@ -76,7 +76,7 @@ Video training (commercial):
 
 == Clojure Tools
 
-Community volunteers maintain http://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different tools and approaches. Some of the most commonly used tools include:
+Community volunteers maintain https://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different tools and approaches. Some of the most commonly used tools include:
 
 * https://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
 * http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
