--- a/content/api/api.adoc
+++ b/content/api/api.adoc
@@ -30,6 +30,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://clojure.github.io/core.match/[core.match] Pattern match and predicate dispatch
 * https://clojure.github.io/core.memoize/[core.memoize] A manipulable, pluggable, memoization framework
 * https://clojure.github.io/core.rrb-vector/[core.rrb-vector] RRB-Tree-based vectors
+* https://clojure.github.io/core.specs.alpha/[core.specs.alpha] Specs for clojure.core
 * https://clojure.github.io/core.typed/[core.typed] Gradual typing
 * https://clojure.github.io/core.unify/[core.unify] Unification library
 * https://clojure.github.io/data.avl/[data.avl] AVL trees
@@ -48,9 +49,9 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://clojure.github.io/java.jmx/[java.jmx] JMX interface
 * https://clojure.github.io/math.combinatorics/[math.combinatorics] Lazy sequences for common combinatorial functions
 * https://clojure.github.io/math.numeric-tower/[math.numeric-tower] Math functions and numeric tower
+* https://clojure.github.io/spec.alpha/[spec.alpha] Describing the structure of data and functions
 * https://clojure.github.io/test.generative/[test.generative] Test data generation and execution harness
 * https://clojure.github.io/tools.analyzer/[tools.analyzer] Analyzer framework for Clojure code 
-* https://clojure.github.io/tools.analyzer.js/[tools.analyzer.js] JavaScript-specific passes for tools.analyzer 
 * https://clojure.github.io/tools.analyzer.jvm/[tools.analyzer.jvm] JVM-specific passes for tools.analyzer
 * https://clojure.github.io/tools.cli/[tools.cli] Command-line argument processor
 * https://clojure.github.io/tools.emitter.jvm/[tools.emitter.jvm] JVM bytecode generator
